WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296320
[GTK][WPE] Fix damage visualizer when platform uses damage
https://bugs.webkit.org/show_bug.cgi?id=296320
Summary
[GTK][WPE] Fix damage visualizer when platform uses damage
Pawel Lampe
Reported
2025-07-22 03:09:55 PDT
When damage visualizer is active, the damage rects visualized previous frame may not get erased if platform actually uses damage.
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2025-07-22 03:16:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48364
EWS
Comment 2
2025-07-22 06:25:51 PDT
Committed
297734@main
(845c7a57e7dc): <
https://commits.webkit.org/297734@main
> Reviewed commits have been landed. Closing PR #48364 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-07-22 06:26:17 PDT
<
rdar://problem/156396801
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug