[GTK][WPE] Fix damage visualizer when platform uses damage https://bugs.webkit.org/show_bug.cgi?id=296320

Reviewed by Carlos Garcia Campos.

This change resets the damage passed to platform to full viewport
when then damage visualizer is active. This way, the damage rects
visualized previous frame will always get erased if the platform
actually uses damage.

Canonical link: https://commits.webkit.org/297734@main